@@ -1,3 +1,8 @@
+2006-09-27  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py	(Column): Document properties
+	(ObjectList): Document signals and properties
+
 2006-09-25  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/environ.py (Library.enable_translation)
